--- a/10-vocales.html
+++ b/10-vocales.html
@@ -56,7 +56,7 @@
                             <label id="txtInverso"></label>
                         </div>
                     </form>
-                    <input type="button" value="Mostrar Cantidad de Vocales" class="submitguardar">
+                    <input type="button" value="Cantidad de Vocales" class="submitguardar">
 
                 </article>
             </section>
