--- a/3-paroimpar.html
+++ b/3-paroimpar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Número Par o Impar</title>
     <link rel="stylesheet" href="css/3-paroimpar.css">
-    <script src="js/3-paroimpar.js" defer></script>
+    <script src="js/3-paroimpar.js"></script>
 </head>
 <body>
     <nav>
