--- a/5-potencia.html
+++ b/5-potencia.html
@@ -1,74 +1,81 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potencia de un número</title>
     <link rel="stylesheet" href="css/5-potencia.css">
+    <script src="js/5-potencia.js"></script>
 </head>
-<body> <div class="area">
-    <ul class="circles">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
 
-    </ul>
-    <nav>
-        <ul class="navul">
-            <h2 id="tituloType">TypeScript</h2>
-            <li class="navli"><a href="1-promedio.html" class="enlaceColor">Página 1</a></li>
-            <li class="navli"><a href="2-areatriangulo.html" class="enlaceColor">Página 2</a></li>
-            <li class="navli"><a href="3-paroimpar.html" class="enlaceColor">Página 3</a></li>
-            <li class="navli"><a href="4-mayorymenor.html" class="enlaceColor">Página 4</a></li>
-            <li class="navli"><a href="5-potencia.html" class="enlaceColor">Página 5</a></li>
-            <li class="navli"><a href="6-txtinverso.html" class="enlaceColor">Página 6</a></li>
-            <li class="navli"><a href="7-factorial.html" class="enlaceColor">Página 7</a></li>
-            <li class="navli"><a href="8-numperfecto.html" class="enlaceColor">Página 8</a></li>
-            <li class="navli"><a href="9-primo.html" class="enlaceColor">Página 9</a></li>
-            <li class="navli"><a href="10-vocales.html" class="enlaceColor">Página 10</a></li>
+<body>
+    <div class="area">
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+
         </ul>
-    </nav>
-    <a href="index.html">
-        <input type="button" value="<< MENÚ PRINCIPAL" class="boton-regresar">
-    </a>
-    <header>
-        <h1>Encontrar la potencia de un número</h1>
-    </header>
-    <p>    Elevar un número a una potencia, los valores deben ser ingresados por el usuario. </p>
+        <nav>
+            <ul class="navul">
+                <h2 id="tituloType">TypeScript</h2>
+                <li class="navli"><a href="1-promedio.html" class="enlaceColor">Página 1</a></li>
+                <li class="navli"><a href="2-areatriangulo.html" class="enlaceColor">Página 2</a></li>
+                <li class="navli"><a href="3-paroimpar.html" class="enlaceColor">Página 3</a></li>
+                <li class="navli"><a href="4-mayorymenor.html" class="enlaceColor">Página 4</a></li>
+                <li class="navli"><a href="5-potencia.html" class="enlaceColor">Página 5</a></li>
+                <li class="navli"><a href="6-txtinverso.html" class="enlaceColor">Página 6</a></li>
+                <li class="navli"><a href="7-factorial.html" class="enlaceColor">Página 7</a></li>
+                <li class="navli"><a href="8-numperfecto.html" class="enlaceColor">Página 8</a></li>
+                <li class="navli"><a href="9-primo.html" class="enlaceColor">Página 9</a></li>
+                <li class="navli"><a href="10-vocales.html" class="enlaceColor">Página 10</a></li>
+            </ul>
+        </nav>
+        <a href="index.html">
+            <button class="boton-regresar">
+                << MENÚ PRINCIPAL</button>
 
-    <br><br>
-    <span class="span">
-        <section>
-            <article>
-                <form>
-                    <div class="inputbox">
-                        <input type="number" required>
-                        <label for="">Ingrese un número ( base )</label>
-                    </div>
+        </a>
+        <header>
+            <h1>Encontrar la potencia de un número</h1>
+        </header>
+        <p> Elevar un número a una potencia, los valores deben ser ingresados por el usuario. </p>
 
-                    <div class="inputbox">
-                        <input type="number" required>
-                        <label for="">Ingrese el exponente</label>
-                    </div>
+        <br><br>
+        <span class="span">
+            <section>
+                <article>
+                    <form>
+                        <div class="inputbox">
+                            <input type="number" required id="txtBase" name="txtBase">
+                            <label for="txtBase">Ingrese un número ( base )</label>
+                        </div>
 
-                    <div class="inputbox">
-                        <input type="number" required readonly id="totalNum" placeholder="Resultado">
-                        <label id="totalSuma"></label>
-                    </div>
-                </form>
-                <input type="button" value="Obtener Resultado" class="submitguardar">
+                        <div class="inputbox">
+                            <input type="number" required id="txtExponente" name="txtExponente">
+                            <label for="txtExponente">Ingrese el exponente</label>
+                        </div>
 
-            </article>
-        </section>
-    </span>
-</div>
+                        <div class="inputbox">
+                            <input type="text" readonly id="resultado" placeholder="Resultado">
+                            <label for="resultado"></label>
+                        </div>
+                    </form>
+                    <button id="btnNumero" class="submitguardar" onclick="potencia()">Obtener Resultado</button>
+
+                </article>
+            </section>
+        </span>
+    </div>
 
 </body>
+
 </html>
