--- a/3-paroimpar.html
+++ b/3-paroimpar.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Número Par o Impar</title>
     <link rel="stylesheet" href="css/3-paroimpar.css">
-    <script src="js/3-paroimpar.js"></script>
+    <script defer src="js/3-paroimpar.js"></script>
 </head>
+
 <body>
     <nav>
         <ul>
@@ -50,9 +52,11 @@
                     <input type="text" readonly id="resultado" placeholder="Resultado">
                     <label for="resultado"></label>
                 </div>
+
+                <button type="button" id="btnNumero" class="submitguardar">Obtener Resultado</button>
             </form>
-            <button id="btnNumero" class="submitguardar">Obtener Resultado</button>
         </article>
     </section>
 </body>
+
 </html>
